Refactor: Implement enums across the persistance