@@ -4,58 +4,61 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
+import com.example.exergen.model.EquipmentType;
 import com.example.exergen.model.Exercise;
+import com.example.exergen.model.MuscleGroup;
 
 import org.junit.Test;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class WorkoutGenerationConstraintsTest {
 
     @Test(expected = IllegalArgumentException.class)
-    public void constructorRejectsNullSelectedEquipment() {
+    public void testConstructorRejectsNullSelectedEquipment() {
         new WorkoutGenerationConstraints(null, List.of("Chest"), 20);
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void constructorRejectsNullTargetMuscles() {
+    public void testConstructorRejectsNullTargetMuscles() {
         new WorkoutGenerationConstraints(List.of("Dumbbells"), null, 20);
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void constructorRejectsEmptyTargetMuscles() {
+    public void testConstructorRejectsEmptyTargetMuscles() {
         new WorkoutGenerationConstraints(List.of("Dumbbells"), List.of(), 20);
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void constructorRejectsNonPositiveDuration() {
+    public void testConstructorRejectsNonPositiveDuration() {
         new WorkoutGenerationConstraints(List.of("Dumbbells"), List.of("Chest"), 0);
     }
 
     @Test(expected = IllegalArgumentException.class)
-    public void constructorRejectsBlankConstraintValues() {
+    public void testConstructorRejectsBlankConstraintValues() {
         new WorkoutGenerationConstraints(List.of(" "), List.of("Chest"), 20);
     }
 
     @Test
-    public void constructorTrimsValuesAndStoresDuration() {
+    public void testConstructorTrimsValuesAndStoresDuration() {
         WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(List.of(" Dumbbells "),
                 List.of(" Chest "), 25);
 
-        assertEquals(List.of("Dumbbells"), constraints.getSelectedEquipment());
-        assertEquals(List.of("Chest"), constraints.getTargetMuscleGroups());
+        assertEquals(Arrays.asList(EquipmentType.DUMBBELLS), constraints.getSelectedEquipment());
+        assertEquals(Arrays.asList(MuscleGroup.CHEST), constraints.getTargetMuscleGroups());
         assertEquals(25, constraints.getDesiredDurationMinutes());
     }
 
     @Test
-    public void matchesExerciseReturnsTrueWhenEquipmentAndMuscleMatch() {
+    public void testMatchesExerciseReturnsTrueWhenEquipmentAndMuscleMatch() {
         WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(List.of("Dumbbells"),
                 List.of("Chest"), 20);
         Exercise exercise = new Exercise(
                 "ex-1",
                 "Dumbbell Press",
-                List.of("Chest", "Triceps"),
-                List.of("Dumbbells"),
+                Arrays.asList(MuscleGroup.CHEST, MuscleGroup.TRICEPS),
+                Arrays.asList(EquipmentType.BODYWEIGHT),
                 "Press dumbbells",
                 3,
                 "img");
@@ -64,14 +67,14 @@ public class WorkoutGenerationConstraintsTest {
     }
 
     @Test
-    public void matchesExerciseReturnsFalseWhenMuscleDoesNotMatch() {
+    public void testMatchesExerciseReturnsFalseWhenMuscleDoesNotMatch() {
         WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(List.of("Dumbbells"),
                 List.of("Legs"), 20);
         Exercise exercise = new Exercise(
                 "ex-1",
                 "Dumbbell Press",
-                List.of("Chest", "Triceps"),
-                List.of("Dumbbells"),
+                Arrays.asList(MuscleGroup.CHEST, MuscleGroup.TRICEPS),
+                Arrays.asList(EquipmentType.DUMBBELLS),
                 "Press dumbbells",
                 3,
                 "img");
@@ -80,14 +83,14 @@ public class WorkoutGenerationConstraintsTest {
     }
 
     @Test
-    public void matchesExerciseReturnsFalseWhenEquipmentDoesNotMatch() {
+    public void testMatchesExerciseReturnsFalseWhenEquipmentDoesNotMatch() {
         WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(List.of("Barbell"),
                 List.of("Chest"), 20);
         Exercise exercise = new Exercise(
                 "ex-1",
                 "Dumbbell Press",
-                List.of("Chest", "Triceps"),
-                List.of("Dumbbells"),
+                Arrays.asList(MuscleGroup.CHEST, MuscleGroup.TRICEPS),
+                Arrays.asList(EquipmentType.DUMBBELLS),
                 "Press dumbbells",
                 3,
                 "img");
@@ -96,13 +99,13 @@ public class WorkoutGenerationConstraintsTest {
     }
 
     @Test
-    public void matchesExerciseAllowsAnyEquipmentWhenNoEquipmentSelected() {
+    public void testMatchesExerciseAllowsAnyEquipmentWhenNoEquipmentSelected() {
         WorkoutGenerationConstraints constraints = new WorkoutGenerationConstraints(List.of(), List.of("Chest"), 20);
         Exercise exercise = new Exercise(
                 "ex-1",
                 "Bodyweight Pushup",
-                List.of("Chest", "Triceps"),
-                List.of("Bodyweight"),
+                Arrays.asList(MuscleGroup.CHEST, MuscleGroup.TRICEPS),
+                Arrays.asList(EquipmentType.BODYWEIGHT),
                 "Pushup",
                 2,
                 "img");
